# Ising_2d

./: CMakeLists.txt  README.md  in.input  ising_2d  ising_2d.c  ising_2d.cpp  ising_2d_gpu  ising_2d_gpu.cpp  ising_2d_mpi.cpp  ising_2d_omp.cpp  kernel_ising.cu  verify.py
Benchmarking/: in.input
Benchmarking/gpu/: CMakeLists.txt  ising_2d_gpu.cpp  kernel_ising.cu
Benchmarking/gpu_aware_mpi/: CMakeLists.txt  gpu_ising.cpp  gpu_ising.h  ising_2d_mpi_gpu.cpp  kernel_ising_mpi.cu  kernel_ising_mpi.cuh
Benchmarking/mpi/: ising_2d_mpi.cpp
Benchmarking/mpi_gpu/: ising_2d_mpi_gpu.cpp  kernel_ising_mpi.cuh
Benchmarking/omp/: ising_2d_omp.cpp
Benchmarking/serial/: ising_2d.c  ising_2d.cpp
figures/: StrongScaling_Data.xlsx  description_and_instructions.md
gpu/: CMakeLists.txt  README.md  ising_2d_gpu.cpp  kernel_ising.cu
gpu_aware_mpi/: README.md  gpu_ising.cpp  gpu_ising.h  ising_2d_mpi_gpu.cpp  kernel_ising_mpi.cu  kernel_ising_mpi.cuh
mpi/: README.md
mpi_gpu/: CMakeLists.txt  README.md  gpu_ising.cpp  gpu_ising.h  in.input  ising_2d_mpi_gpu.cpp  kernel_ising_mpi.cu  kernel_ising_mpi.cuh
omp/: README.md  ising_2d_omp.cpp
serial/: README.md  ising_2d.cpp
